Add custom queries
